--- a/.local/ProjectSettings.json
+++ b/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"t2.xaml\",\"Main.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"Main.xaml\",\"Main - Copy - Copy.xaml\",\"Main - Copy.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
